Correções HTML e SEO

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/temaDark.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <meta name="description" content="Encontre os melhores. Oferecemos uma ampla e muito mais, com entrega rápida e garantia de qualidade. Visite-nos hoje mesmo e aproveite nossas ofertas exclusivas!">
+    <link rel="stylesheet" href="css/style.css" media="all" as="style">
+    <link rel="stylesheet" href="css/temaDark.css" media="all" as="style">
+    <link rel="preconnect" href="https://fonts.googleapis.com" as="font">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin as="font">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" media="all" as="font">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" media="all">
     <title>Seu Site</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
         <a href="tel:+"><i class="fa-solid fa-phone-volume icones"></i> +55 11 99999-9999</a>
     </header>
     <nav id="itens">
-        <img src="img/logo.webp" alt="Hotel ok">  
+        <img src="img/logo.webp" alt="Logo da empresa" loading="lazy" height="auto" width="auto">  
         <!-- Ícone do menu para dispositivos móveis -->
         <div class="menu-mobile-icon">
             <i id="burguer" class="fas fa-bars" onclick="clickMenu()"></i>
@@ -147,7 +148,7 @@
         </section>
         <!-- newslatter -->
         <section class="newsletter" id="contato">
-            <h6>Fale Conosco atráves do WhatsApp</h6>
+            <h4>Fale Conosco atráves do WhatsApp</h4>
             <p>Entre em Contato</p>
             <hr>
             <a href="http://" target="_blank" rel="noopener noreferrer">Nosso time está online <i class="fa-brands fa-whatsapp"></i></a>
@@ -172,12 +173,11 @@
             </li>
         </ul>
         <p>Todos os direitos reservados a SuaEmpresa 2024</p>
-        </a>
         <a href="" target="_blank" rel="noopener noreferrer">
             Desenvolvido por GrupoInovaTech 2024 <span style="font-size: 100%;">&#9749</span> Feito com Amor <span style="font-size: 100%;">&#128155</span>
         </a>
     </footer>
-    <script src="./javascript/script.js"></script>
-    <script src="./javascript/menuMobile.js"></script>
+    <script src="./javascript/script.js" as="script" defer></script>
+    <script src="./javascript/menuMobile.js" as="script" defer></script>
 </body>
 </html>
